join화면 center로 위치

--- a/final/cloujoin.html
+++ b/final/cloujoin.html
@@ -1,25 +1,28 @@
 <html>
     <head>
-        <title>join</title>
-    </head>
-    <body>
-        <form>
-        이름: <input type="text"  name="name"><br />
-        아이디: <input type="text" maxlength="10" name="id"><br />
-        비밀번호: <input type="password" maxlength="10" name="pw1"><br />
+            <title>join</title>
+        </head>
+        <center>
+        <body>
+            <form action="clouplaylist.html" method="post">
+                이름:
+                <input type="text" name="name"><br/><br />
+                아이디:
+                <input type="text" maxlength="10" name="id"><br/><br />
+                비밀번호:
+                <input type="password" maxlength="10" name="pw1"><br/><br />
 
-        취미: 
-        <select>
-            <option>야구장가기</option>
-            <option>페스티벌참가</option>
-            <option>운동</option>
-            <option>스포츠관람</option>
-            <option>음주가무</option>
-        </select>
+                취미:
+                <select>
+                    <option>야구장가기</option>
+                    <option>페스티벌참가</option>
+                    <option>운동</option>
+                    <option>스포츠관람</option>
+                    <option>음주가무</option>
+                </select>
+                <input type="submit" value="회원가입">
 
-         </form>
-         <form action="clouplaylist.html" method="post">
-             <input type="submit" value="회원가입">
-         </form>
-    </body>
+            </form>
+        </center>
+        </body>
 </html>
