playlist center로 위치

--- a/final/clouplaylist.html
+++ b/final/clouplaylist.html
@@ -1,22 +1,26 @@
 <html>
     <head>
-        <title>다희의 플레이 리스트</title>
-    </head>
-    <body>
-        <br />
-        다희의 플레이 리스트
-        <br /><br />
-        <form action="playlist2.html" method="post">
-   
-            ID: <input type="text" maxlength="10" name="id"><br />
-            PW: <input type="password" maxlength="10" name="pw"> 
-            <td><input type="submit" value="로그인"></td>
+        <center>
+            <title>다희의 플레이 리스트</title>
+        </head>
+        <body>
+            <br/>
+            <h1>다희의 플레이 리스트</h1>
+            <br/><br/>
+            <form action="playlist2.html" method="post">
 
-        </form>
+                ID:
+                <input type="text" name="id"><br/>
+                PW:
+                <input type="password" name="pw">
+                <td><input type="submit" value="로그인"></td>
 
-        <form action="cloujoin.html" method="post">
-            <input type="submit" value="회원가입">
-        </form>
+            </form>
 
-    </body>
+            <form action="cloujoin.html" method="post">
+                <input type="submit" value="회원가입">
+            </form>
+
+        </body>
+    </center>
 </html>
