플레이리스트 코드정리

--- a/final/playlist2.html
+++ b/final/playlist2.html
@@ -3,7 +3,8 @@
         <title>join</title>
     </head>
     <body>
-        플레이 리스트 <br /><br />
+        플레이 리스트
+        <br/><br/>
         <form action="mark.html" method="post">
             <a href="a.html" target="my link"></a>
             <a href="mark.html" target="my link">북마크</a>
@@ -18,6 +19,6 @@
             <a href="a.html" target="my link"></a>
             <a href="video.html" target="my link">동영상</a>
         </form>
-        
+
     </body>
 </html>
